[package]
name = "crate-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {default-features = false, version = "1.35.1", features = ["full"]}
# tower-lsp = {default-features = false, version = "*", features = ["default"]}
tower-lsp = "*"
serde_json = {default-features = false, version = "*", features=["std"]}
serde = {default-features = false, version = "*", features=["std"]}
toml = {default-features = false, version = "*", features = ["default"]}
reqwest = {default-features = false, version = "*", features = ["json","rustls-tls"]}
